<resources>
    <string name="app_name">TeacherHD</string>
    <string name="main_search">搜索</string>
    <string name="main_index">首页</string>
    <string name="main_contacts">联系人</string>
    <string name="main_courseware">课件</string>
    <string name="edt_search">请输入即将需要搜索的关键字</string>
    <string name="textbook_chapters">教材章节</string>
    <string name="grammar">教案</string>
    <string name="exercises">习题</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="login_user_name">请输入用户名/手机/邮箱</string>
    <string name="login_user_pwd">请输入密码</string>
    <string name="show_setup_prompt">程序未安装，请打开商店安装！</string>
    <string name="pwd_error">用户名或密码错误,请重新输入!</string>
    <string name="add_version">添加教材版本</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="search_content">请输入搜索的内容</string>
    <string name="selectSubject">选择教材</string>
    <string name="only_format">* 只能上传PPT,WORD,MP4,MP3,PDF,EXCEL格式文件</string>
    <string name="title_activity_empty_class">EmptyClass</string>
</resources>
