<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hanboard.teacherhd.android.activity.LoginActivity"
    android:background="@mipmap/login_bg"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="600dp"
        android:layout_height="500dp"
        android:background="@mipmap/login_input_bg_03"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_login_header"
            android:src="@mipmap/login_zhengyan_03"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/img_login_header"
            android:layout_alignParentStart="true">
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cccccc"/>
            <com.hanboard.teacherhd.common.view.ClearEditText
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/login_user_name"
                android:textColorHint="#cccccc"
                android:textSize="13dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/usericon_03"
                android:background="@drawable/login_edt_bg"
                android:id="@+id/edt_loging_username"/>
            <View
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cccccc"/>
            <EditText
                android:id="@+id/edt_loging_pwd"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColorHint="#cccccc"
                android:textSize="13dp"
                android:hint="@string/login_user_pwd"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edt_bg"
                android:drawableLeft="@mipmap/pwdicon_03"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cccccc"/>
            <RelativeLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/kuxiao_03"
                    android:id="@+id/imageView5" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imageView5" />
            </RelativeLayout>
            <Button
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:id="@+id/btn_login"
                android:background="@drawable/login_btn_bg"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
