<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:elevation="4dp">
        <ImageView
            android:onClick="back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="授课"
            android:id="@+id/textView3"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/griadent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:id="@+id/class_grammar"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center">
                        <View
                            android:background="@mipmap/left_02"
                            android:layout_width="8dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/view_class_grammar"
                            />
                        <LinearLayout
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/img_class_grammar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/home"/>
                            <TextView
                                android:id="@+id/txt_class_grammar"
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/grammar"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/class_course"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center">
                        <View
                            android:background="@mipmap/left_02"
                            android:layout_width="8dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/view_class_courseware"
                            />
                        <LinearLayout
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/img_class_courseware"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/kejian_06"/>
                            <TextView
                                android:id="@+id/txt_class_courseware"
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_courseware"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/class_exercises"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center">
                        <View
                            android:background="@mipmap/left_02"
                            android:layout_width="8dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/view_class_exercises"
                            />
                        <LinearLayout
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <ImageView
                                android:id="@+id/img_class_exercises"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/xiti_06"/>
                            <TextView
                                android:id="@+id/txt_class_exercises"
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/exercises"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:background="@mipmap/left_02"
                        android:layout_width="8dp"
                        android:layout_height="match_parent"></LinearLayout>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/lnl_class_content"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
        <com.lzp.floatingactionbuttonplus.FloatingActionButtonPlus
            android:layout_marginTop="-1dp"
            android:id="@+id/FabPlus"
            app:mBackgroundColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:switchFabColor="@color/theme_color"
            app:switchFabIcon="@mipmap/contacts"
            app:layout_behavior="com.lzp.floatingactionbuttonplus.FabBehavior"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_alignParentBottom="true">
            <com.lzp.floatingactionbuttonplus.FabTagLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tagText="电子白板">
                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/contacts"
                    app:backgroundTint="#468cb7"
                    app:fabSize="mini"/>
            </com.lzp.floatingactionbuttonplus.FabTagLayout>
            <com.lzp.floatingactionbuttonplus.FabTagLayout
                android:id="@+id/activity_class_noScroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tagText="投影仪">
                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/contacts"
                    app:backgroundTint="#818aa7"
                    app:fabSize="mini" />
            </com.lzp.floatingactionbuttonplus.FabTagLayout>


            <com.lzp.floatingactionbuttonplus.FabTagLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tagText="开启录屏">
                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/contacts"
                    app:backgroundTint="#4BB7A7"
                    app:fabSize="mini" />
            </com.lzp.floatingactionbuttonplus.FabTagLayout>
            <com.lzp.floatingactionbuttonplus.FabTagLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tagText="退出">
                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/contacts"
                    app:backgroundTint="#4284E4"
                    app:fabSize="mini" />
            </com.lzp.floatingactionbuttonplus.FabTagLayout>
        </com.lzp.floatingactionbuttonplus.FloatingActionButtonPlus>
    </RelativeLayout>

</LinearLayout>
